--- a/index.html
+++ b/index.html
@@ -3,28 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Bento grid</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./styleMedia.css" />
+  <title>Bento grid</title>
 </head>
 <body>
 
-  Social Media 10x Faster with AI
-  Over 4,000 5-star reviews
+  <div class="social_media">
+    <h1>
+      Social Media <i>10x</i> Faster with AI
+    </h1>
+    <img src="./assets/images/illustration-five-stars.webp" alt="star image">
+    <small>Over 4,000 5-star reviews</small>
+  </div>
 
-  Manage multiple accounts and platforms.
+  <div class="manage">
+    <img src="./assets/images/illustration-multiple-platforms.webp" alt="platforms images">
+    <h2>Manage multiple accounts and platforms</h2>
+  </div>
 
-  Maintain a consistent posting schedule.
+  <div class="schedule">
+    <h2>Maintain a consistent posting schedule.</h2>
+    <img src="./assets//images/illustration-consistent-schedule.webp" alt="schedule image">
+  </div>
 
-  Schedule to social media.
-  Optimize post timings to publish content at the perfect time for your audience.
+  <div class="calender">
+    <h2>Schedule to social media.</h2>
+    <img src="./assets/images/illustration-schedule-posts.webp" alt="calender image">
+    <p>Optimize post timings to publish content at the perfect time for your audience.</p>
+  </div>
   
   Grow followers with non-stop content.
 
@@ -36,7 +44,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/love-olubummo-dvelat/" target="_blank">Love Olubummo</a>.
   </div>
 </body>
 </html>
