feature: wrapped text with html tags

--- a/index.html
+++ b/index.html
@@ -34,13 +34,26 @@
     <p>Optimize post timings to publish content at the perfect time for your audience.</p>
   </div>
   
-  Grow followers with non-stop content.
+  <div class="grow">
+    <img src="./assets/images/illustration-grow-followers.webp" alt="grow followers image">
+    <h2>Grow followers with non-stop content.</h2>
+  </div>
 
-  >56% faster audience growth
+  <div class="percent">
+    <h1>>56%</h1>
+    <small>faster audience growth</small>
+    <img src="./assets/images/illustration-audience-growth.webp" alt="audience image">
+  </div>
   
-  Create and schedule content quicker.
+  <div class="quicker">
+    <h2>Create and schedule content <span>quicker.</span></h2>
+    <img src="./assets/images/illustration-create-post.webp" alt="button image">
+  </div>
 
-  Write your content using AI.
+  <div class="write">
+    <h2>Write your content using AI.</h2>
+    <img src="./assets/images/illustration-ai-content.webp" alt="ai image">
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
