--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <img src="./assets/images/illustration-ai-content.webp" alt="ai image">
   </div>
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="https://www.linkedin.com/in/love-olubummo-dvelat/" target="_blank">Love Olubummo</a>.
-  </div>
+  </div> -->
 </body>
 </html>
