--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
     <h2>Write your content using AI.</h2>
     <img src="./assets/images/illustration-ai-content.webp" alt="ai image">
   </div>
-  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/love-olubummo-dvelat/" target="_blank">Love Olubummo</a>.
-  </div> -->
+
+  <!-- 2 rows and 1 column make smallest box -->
+  <!-- 3 rows and 2 column make 10x box -->
+  <!-- 4 rows make quicker box -->
 </body>
 </html>
