feature: temporary css layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/DM+Sans">
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./styleMedia.css" />
   <title>Bento grid</title>
@@ -12,7 +13,7 @@
 
   <div class="social_media">
     <h1>
-      Social Media <i>10x</i> Faster with AI
+      Social Media <span>10x</span> Faster with AI
     </h1>
     <img src="./assets/images/illustration-five-stars.webp" alt="star image">
     <small>Over 4,000 5-star reviews</small>
