feature: temporary css layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="manage">
     <img src="./assets/images/illustration-multiple-platforms.webp" alt="platforms images">
-    <h2>Manage multiple accounts and platforms</h2>
+    <h2>Manage multiple accounts and platforms.</h2>
   </div>
 
   <div class="schedule">
