--- a/index.html
+++ b/index.html
@@ -11,50 +11,47 @@
 </head>
 <body>
 
-  <div class="social_media">
-    <h1>
-      Social Media <span>10x</span> Faster with AI
-    </h1>
-    <img src="./assets/images/illustration-five-stars.webp" alt="star image">
-    <small>Over 4,000 5-star reviews</small>
-  </div>
-
-  <div class="manage">
-    <img src="./assets/images/illustration-multiple-platforms.webp" alt="platforms images">
-    <h2>Manage multiple accounts and platforms.</h2>
-  </div>
-
-  <div class="schedule">
-    <h2>Maintain a consistent posting schedule.</h2>
-    <img src="./assets//images/illustration-consistent-schedule.webp" alt="schedule image">
-  </div>
-
-  <div class="calender">
-    <h2>Schedule to social media.</h2>
-    <img src="./assets/images/illustration-schedule-posts.webp" alt="calender image">
-    <p>Optimize post timings to publish content at the perfect time for your audience.</p>
-  </div>
-  
-  <div class="grow">
-    <img src="./assets/images/illustration-grow-followers.webp" alt="grow followers image">
-    <h2>Grow followers with non-stop content.</h2>
-  </div>
-
-  <div class="percent">
-    <h1>>56%</h1>
-    <small>faster audience growth</small>
-    <img src="./assets/images/illustration-audience-growth.webp" alt="audience image">
-  </div>
-  
-  <div class="quicker">
-    <h2>Create and schedule content <span>quicker.</span></h2>
-    <img src="./assets/images/illustration-create-post.webp" alt="button image">
-  </div>
-
-  <div class="write">
-    <h2>Write your content using AI.</h2>
-    <img src="./assets/images/illustration-ai-content.webp" alt="ai image">
-  </div>
+  <main>
+    <div class="social_media">
+      <h1>
+        Social Media <span>10x</span> Faster with AI
+      </h1>
+      <img src="./assets/images/illustration-five-stars.webp" alt="star image">
+      <small>Over 4,000 5-star reviews</small>
+    </div>
+    <div class="manage">
+      <img src="./assets/images/illustration-multiple-platforms.webp" alt="platforms images">
+      <h2>Manage multiple accounts and platforms.</h2>
+    </div>
+    <div class="schedule">
+      <h2>Maintain a consistent posting schedule.</h2>
+      <img src="./assets//images/illustration-consistent-schedule.webp" alt="schedule image">
+    </div>
+    <div class="calender">
+      <h2>Schedule to social media.</h2>
+      <img src="./assets/images/illustration-schedule-posts.webp" alt="calender image">
+      <p>Optimize post timings to publish content at the perfect time for your audience.</p>
+    </div>
+    
+    <div class="grow">
+      <img src="./assets/images/illustration-grow-followers.webp" alt="grow followers image">
+      <h2>Grow followers with non-stop content.</h2>
+    </div>
+    <div class="percent">
+      <h1>>56%</h1>
+      <small>faster audience growth</small>
+      <img src="./assets/images/illustration-audience-growth.webp" alt="audience image">
+    </div>
+    
+    <div class="quicker">
+      <h2>Create and schedule content <span>quicker.</span></h2>
+      <img src="./assets/images/illustration-create-post.webp" alt="button image">
+    </div>
+    <div class="write">
+      <h2>Write your content using AI.</h2>
+      <img src="./assets/images/illustration-ai-content.webp" alt="ai image">
+    </div>
+  </main>
 
   <!-- 2 rows and 1 column make smallest box -->
   <!-- 3 rows and 2 column make 10x box -->
